--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -27,6 +27,7 @@ python-magic = "^0.4.27"
 pillow = "^11.3.0"
 aiofiles = "^24.1.0"
 nest-asyncio = "^1.6.0"
+loguru = "^0.7.3"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^8.2.0"
