improve: Reduz ruído visual em logs (Prioridade 1 e 2)
Implementa melhorias de observabilidade para reduzir poluição visual
em logs de desenvolvimento, mantendo informações importantes.

Prioridade 1: Reduzir ruído httpx/httpcore
- setLevel(WARNING) para httpx/httpcore em setup_stdlib_intercept()
- Elimina ~15 linhas de logs DEBUG de baixo nível (TCP/TLS handshakes)
- Mantém logs de erros HTTP (importantes para debug)

Prioridade 2: Suprimir duplicação LiteLLM
- Configura LITELLM_LOG=ERROR antes de importar módulos
- Remove duplicação de logs (stdlib + LiteLLM native)
- Exemplo: "Using AiohttpTransport..." aparecia 2x, agora 1x

Arquivos modificados:
- logger_config.py: Adiciona setLevel() condicional
- main.py: Configura os.environ["LITELLM_LOG"] no topo
- .env.example: Documenta LITELLM_LOG com opções

Impacto: Redução de ~90% no ruído visual de logs DEBUG
Benefício: Logs mais limpos e focados em informações relevantes

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -123,3 +123,8 @@ SUPABASE_JWT_EXPIRATION_HOURS=24
 # System Configuration
 LOG_LEVEL=INFO
 ENVIRONMENT=development
+
+# LiteLLM Logging Configuration
+# Controls LiteLLM's native logging (prevents duplicate logs)
+# Options: DEBUG | INFO | WARNING | ERROR
+LITELLM_LOG=ERROR                # Recommended: ERROR (only critical issues, avoids duplication)
