feat: Visual limpo em logs de startup (modo produção)
Implementa formatador condicional que omite cabeçalhos do Loguru
em logs STARTUP quando VOXY_LOG_LEVEL != DEBUG.

FEATURE: Formatador Custom Condicional
- _format_startup_visual() detecta events STARTUP|*
- INFO/WARNING/ERROR: Omite cabeçalho (visual limpo)
- DEBUG: Mostra cabeçalho completo (rastreamento técnico)

ANTES (INFO mode - com cabeçalho):
2025-10-13 20:46:11.814 | INFO | STARTUP|ORCHESTRATOR |
🤖 VOXY Orchestrator Initialized
   └─ ✓ Ready in 26.5ms

DEPOIS (INFO mode - sem cabeçalho):
🤖 VOXY Orchestrator Initialized
   ├─ Model: openrouter/anthropic/claude-sonnet-4.5
   └─ ✓ Ready in 26.5ms

RESULTADO:
✅ Produção (INFO): Visual limpo e profissional
✅ Desenvolvimento (DEBUG): Rastreamento completo

CONFIGURAÇÃO (.env):
VOXY_LOG_LEVEL=INFO     # Visual limpo
VOXY_LOG_LEVEL=DEBUG    # Cabeçalhos completos

Arquivos modificados:
- logger_config.py: Formatador custom (35 linhas)
- .env.example: Documentação de uso

Benefício: Logs de startup limpos e elegantes em produção

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -124,6 +124,18 @@ SUPABASE_JWT_EXPIRATION_HOURS=24
 LOG_LEVEL=INFO
 ENVIRONMENT=development
 
+# VOXY Logging Configuration
+# Controls VOXY system logging level and visual output
+# Options: DEBUG | INFO | WARNING | ERROR
+VOXY_LOG_LEVEL=INFO              # INFO = Visual limpo (startup sem cabeçalhos), DEBUG = Rastreamento completo
+VOXY_ENV=development             # development | production
+VOXY_LOG_DIR=logs                # Diretório de logs
+VOXY_LOG_JSON=false              # Habilitar JSON sink para ELK/Loki
+
+# Visual Limpo em Startup:
+# - VOXY_LOG_LEVEL=INFO: Logs STARTUP aparecem SEM cabeçalho (visual limpo)
+# - VOXY_LOG_LEVEL=DEBUG: Logs STARTUP aparecem COM cabeçalho (rastreamento técnico)
+
 # LiteLLM Logging Configuration
 # Controls LiteLLM's native logging (prevents duplicate logs)
 # Options: DEBUG | INFO | WARNING | ERROR
