fix: Adiciona load_dotenv(override=True) para garantir precedência do .env
Problema identificado:
- python-dotenv por padrão NÃO sobrescreve env vars do shell
- logger_config.py não tinha load_dotenv(), lia vars direto do shell
- Resultado: Editar .env não aplicava mudanças se var estava no shell

Solução implementada:

1. logger_config.py (linhas 13-17):
   - Adiciona from dotenv import load_dotenv
   - Adiciona load_dotenv(override=True) no topo
   - Garante que .env seja lido ANTES de os.getenv("VOXY_LOG_LEVEL")

2. settings.py (linha 13):
   - Muda load_dotenv() → load_dotenv(override=True)
   - Força override de env vars do shell

3. models_config.py (linha 16):
   - Muda load_dotenv() → load_dotenv(override=True)
   - Consistência: todos os módulos de config usam override

4. .env.example (linhas 139-147):
   - Documenta comportamento de override
   - Explica precedência: .env > shell exports
   - Exemplo claro do funcionamento

Documentação oficial python-dotenv:
"By default, load_dotenv() does not override existing variables."
Ref: https://github.com/theskumar/python-dotenv

Comportamento ANTES:
- export VOXY_LOG_LEVEL=INFO (shell)
- .env: VOXY_LOG_LEVEL=DEBUG
- Sistema usa: INFO (shell não sobrescrito)

Comportamento DEPOIS:
- export VOXY_LOG_LEVEL=INFO (shell)
- .env: VOXY_LOG_LEVEL=DEBUG
- Sistema usa: DEBUG (.env sobrescreve shell) ✅

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -136,6 +136,16 @@ VOXY_LOG_JSON=false              # Habilitar JSON sink para ELK/Loki
 # - VOXY_LOG_LEVEL=INFO: Logs STARTUP aparecem SEM cabeçalho (visual limpo)
 # - VOXY_LOG_LEVEL=DEBUG: Logs STARTUP aparecem COM cabeçalho (rastreamento técnico)
 
+# IMPORTANTE: Override Behavior
+# O sistema usa load_dotenv(override=True) em todos os módulos de configuração.
+# Isso significa que valores neste arquivo .env sempre têm PRIORIDADE sobre
+# variáveis de ambiente setadas no shell (via export).
+#
+# Exemplo:
+# - Shell: export VOXY_LOG_LEVEL=INFO
+# - .env:  VOXY_LOG_LEVEL=DEBUG
+# - Resultado: Sistema usa DEBUG (valor do .env sobrescreve shell)
+
 # LiteLLM Logging Configuration
 # Controls LiteLLM's native logging (prevents duplicate logs)
 # Options: DEBUG | INFO | WARNING | ERROR
