feat: Universal Reasoning Capture System + ModelSettings injection
- Implementado sistema universal de captura de reasoning
- Adicionado ModelSettings.extra_args para reasoning params
- 5 extractors especializados (Claude, Gemini, OpenAI, Grok, Generic)
- Reasoning config loaders para 6 agentes
- Extended SubagentModelConfig com reasoning fields
- Ready for SDK upgrade to fix thinking blocks during tool calls

Files created:
- src/voxy_agents/utils/universal_reasoning_capture.py (698 lines)
- src/voxy_agents/config/reasoning_config.py (304 lines)
- .safe-zone/implementation/UNIVERSAL_REASONING_IMPLEMENTATION.md
- .safe-zone/implementation/REASONING_SDK_LIMITATION.md
- .safe-zone/solutions/REASONING_BLOCKS_SOLUTIONS.md
- .safe-zone/implementation/SDK_UPGRADE_GUIDE.md

Files modified:
- src/voxy_agents/config/models_config.py (reasoning fields)
- src/voxy_agents/core/voxy_orchestrator.py (ModelSettings injection)
- src/voxy_agents/utils/llm_factory.py (reasoning params)
- backend/.env.example (reasoning env vars)
- HISTORY.md (documentation)

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -150,3 +150,47 @@ VOXY_LOG_JSON=false              # Habilitar JSON sink para ELK/Loki
 # Controls LiteLLM's native logging (prevents duplicate logs)
 # Options: DEBUG | INFO | WARNING | ERROR
 LITELLM_LOG=ERROR                # Recommended: ERROR (only critical issues, avoids duplication)
+
+# ============================================
+# UNIVERSAL REASONING/THINKING CONFIGURATION
+# ============================================
+# Habilita captura avançada de reasoning/thinking de múltiplos provedores LLM
+# Suporta: Claude Extended Thinking, Gemini Thinking Config, OpenAI Reasoning Tokens, Grok/DeepSeek reasoning_content
+
+# VOXY Orchestrator - Reasoning Configuration
+ORCHESTRATOR_REASONING_ENABLED=true                   # Habilitar captura de reasoning (default: true)
+ORCHESTRATOR_THINKING_BUDGET_TOKENS=10000             # Claude Extended Thinking: Budget de tokens (~10K tokens de raciocínio)
+ORCHESTRATOR_GEMINI_THINKING_BUDGET=1024              # Gemini Thinking Config: Budget 0-24576, -1=auto (default: 1024)
+# ORCHESTRATOR_REASONING_EFFORT já configurado acima (linha 28)
+
+# Vision Agent - Reasoning Configuration
+VISION_REASONING_ENABLED=true                         # Habilitar captura de reasoning (default: true)
+VISION_THINKING_BUDGET_TOKENS=8000                    # Claude/Anthropic Vision: Budget de tokens para análise
+VISION_GEMINI_THINKING_BUDGET=1024                    # Gemini Vision: Budget de thinking
+# VISION_REASONING_EFFORT já configurado acima (linha 94)
+
+# Calculator Agent - Reasoning Configuration (Grok suporta reasoning_content automático)
+CALCULATOR_REASONING_ENABLED=true                     # Habilitar captura (default: true)
+
+# Corrector Agent - Reasoning Configuration
+CORRECTOR_REASONING_ENABLED=false                     # Geralmente desabilitado (default: false)
+CORRECTOR_GEMINI_THINKING_BUDGET=512                  # Gemini Flash: Budget reduzido (opcional)
+
+# Translator Agent - Reasoning Configuration
+TRANSLATOR_REASONING_ENABLED=false                    # Geralmente desabilitado (default: false)
+TRANSLATOR_GEMINI_THINKING_BUDGET=1024                # Gemini Pro: Budget médio (opcional)
+
+# Weather Agent - Reasoning Configuration
+WEATHER_REASONING_ENABLED=false                       # Weather não precisa reasoning (default: false)
+
+# ============================================
+# REASONING CAPTURE - PROVIDER SUPPORT MATRIX
+# ============================================
+# Claude Sonnet 4.5:     Extended Thinking API (thinking_budget_tokens)     ✅ Full thinking blocks + signatures
+# Gemini 2.5:            Thinking Config API (gemini_thinking_budget)       ✅ Thought summaries
+# OpenAI GPT-5/o1:       Reasoning Effort (reasoning_effort)                ⚠️  Token count only (content hidden)
+# Grok Code Fast 1:      reasoning_content field                            ✅ Full reasoning text
+# DeepSeek Chat v3.1:    reasoning_content field                            ✅ Full reasoning text
+#
+# Sistema Universal captura automaticamente o raciocínio de qualquer provedor,
+# adaptando-se ao formato específico de cada API.
