feat: Auditoria e melhorias no sistema de Reasoning e Logging Hierárquico
## 📊 Resumo das Mudanças

Auditoria completa do sistema de reasoning e logging hierárquico do VOXY Agents,
identificando implementação exemplar no VOXY Orchestrator e Vision Agent, mas gaps
críticos nos outros 4 subagentes. Implementadas melhorias de logging hierárquico
e simplificação da captura de reasoning.

## 🔧 Implementações

### 1. Simplificação da Captura de Reasoning (voxy_orchestrator.py)
- Removida lógica manual de processamento de reasoning items (~30 linhas)
- Delegação completa para Universal Reasoning System
- SDKReasoningExtractor agora filtra automaticamente type=='reasoning'
- Benefícios:
  * Redução de código duplicado
  * Separação clara de responsabilidades
  * Aproveitamento dos 5 extractors especializados
  * Mais robusto contra mudanças no formato do SDK

### 2. Logging Hierárquico Aprimorado nos Subagentes
Arquivos modificados:
- calculator_agent.py (linhas 70-87)
- translator_agent.py (linhas 50-69)
- corrector_agent.py (linhas 50-69)
- weather_agent.py (linhas 102-119)

Melhorias:
- Informação de **provider** agora visível nos logs de startup
- **Status de reasoning** (enabled/disabled) explícito
- **Parâmetros de reasoning** mostrados quando configurados:
  * thinking=N tokens (Claude Extended Thinking)
  * gemini_budget=N (Gemini Thinking Config)
  * effort=medium (OpenAI reasoning_effort)
- Formato hierárquico consistente com VOXY Orchestrator

### 3. Documentação de Estrutura (CLAUDE.md)
Adicionada seção "📁 Estrutura de Documentação" explicando:
- `.safe-zone/`: Área de desenvolvimento (não commitada)
- `docs/`: Documentação oficial (requer autorização)

## 📋 Output de Logs

### Antes:
```
   └─ ✓ Calculator
      ├─ Model: openrouter/anthropic/claude-haiku-4.5
      ├─ Config: 2000 tokens, temp=0.1
      └─ ✓ Ready in 0.0ms
```

### Depois:
```
   └─ ✓ Calculator
      ├─ Model: openrouter/anthropic/claude-haiku-4.5
      ├─ Provider: openrouter                 

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -9,7 +9,7 @@ OR_SITE_URL=https://voxy.ai                    # [OPTIONAL] Your site URL for Op
 OR_APP_NAME=VOXY Agents                        # [OPTIONAL] Your app name for OpenRouter analytics
 
 # Model Configuration (LEGACY - deprecated, use ORCHESTRATOR_* below)
-VOXY_ORCHESTRATOR_MODEL=gpt-4o
+# VOXY_ORCHESTRATOR_MODEL=gpt-4o  # ⚠️ DEPRECATED - Usar ORCHESTRATOR_MODEL (linha 21)
 
 # ============================================
 # VOXY ORCHESTRATOR CONFIGURATION (LiteLLM)
@@ -184,13 +184,51 @@ TRANSLATOR_GEMINI_THINKING_BUDGET=1024                # Gemini Pro: Budget médi
 WEATHER_REASONING_ENABLED=false                       # Weather não precisa reasoning (default: false)
 
 # ============================================
+# OPENROUTER REASONING CONFIGURATION
+# ============================================
+# OpenRouter usa formato unificado 'reasoning' que funciona para TODOS os modelos
+# Aplicável quando *_PROVIDER=openrouter (Orchestrator, Vision, Subagents)
+#
+# Formato OpenRouter (detectado automaticamente pelo sistema):
+#   reasoning = {
+#     "enabled": true,
+#     "max_tokens": 10000,       # OU
+#     "effort": "high"            # high/medium/low
+#   }
+#
+# Conversão Automática (OpenRouter):
+#   - ORCHESTRATOR_THINKING_BUDGET_TOKENS=10000 → reasoning.max_tokens=10000
+#   - ORCHESTRATOR_REASONING_EFFORT=high → reasoning.effort=high
+#   - effort="high" (sem max_tokens) → max_tokens = 80% do ORCHESTRATOR_MAX_TOKENS
+#   - effort="medium" → 50% do max_tokens
+#   - effort="low" → 20% do max_tokens
+#
+# IMPORTANTE: OpenRouter converte automaticamente para formato provider-specific:
+#   - Anthropic Claude: reasoning → thinking.budget_tokens
+#   - Google Gemini: reasoning → thinking_config.thinking_budget
+#   - OpenAI GPT-5/o1: reasoning.effort → reasoning_effort
+#   - Grok: reasoning_content retornado automaticamente (sem config necessária)
+#
+# Reasoning já configurado via variáveis acima:
+# - ORCHESTRATOR_REASONING_EFFORT=medium (linha 28) → usado por OpenRouter
+# - ORCHESTRATOR_THINKING_BUDGET_TOKENS=10000 (linha 162) → reasoning.max_tokens
+# - VISION_REASONING_EFFORT=medium (linha 94) → usado por OpenRouter
+# - VISION_THINKING_BUDGET_TOKENS=8000 (linha 168) → reasoning.max_tokens
+
+# ============================================
 # REASONING CAPTURE - PROVIDER SUPPORT MATRIX
 # ============================================
-# Claude Sonnet 4.5:     Extended Thinking API (thinking_budget_tokens)     ✅ Full thinking blocks + signatures
-# Gemini 2.5:            Thinking Config API (gemini_thinking_budget)       ✅ Thought summaries
-# OpenAI GPT-5/o1:       Reasoning Effort (reasoning_effort)                ⚠️  Token count only (content hidden)
-# Grok Code Fast 1:      reasoning_content field                            ✅ Full reasoning text
-# DeepSeek Chat v3.1:    reasoning_content field                            ✅ Full reasoning text
+# QUANDO USANDO OPENROUTER (provider=openrouter):
+# ✅ Claude Sonnet 4.5:     reasoning.max_tokens → Full thinking blocks + signatures
+# ✅ Gemini 2.5:            reasoning.max_tokens → Thought summaries
+# ✅ OpenAI GPT-5/o1:       reasoning.effort → Token count + some content
+# ✅ Grok Code Fast 1:      reasoning_content automático → Full reasoning text
+# ✅ DeepSeek Chat v3.1:    reasoning_content automático → Full reasoning text
 #
-# Sistema Universal captura automaticamente o raciocínio de qualquer provedor,
-# adaptando-se ao formato específico de cada API.
+# QUANDO USANDO PROVIDER DIRETO (provider=anthropic/google/openai):
+# ✅ Claude (direto):       thinking.budget_tokens → Full thinking blocks
+# ✅ Gemini (direto):       thinking_config.budget → Thought summaries
+# ⚠️  OpenAI (direto):      reasoning_effort → Limited content
+#
+# Sistema Universal detecta automaticamente o provider e usa formato apropriado.
+# Ver: src/voxy_agents/config/reasoning_config.py → to_openrouter_params()
