--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -67,6 +67,10 @@ target-version = "py39"
 select = ["E", "F", "I", "N", "W", "UP"]
 ignore = ["E501"]
 
+[tool.ruff.lint.per-file-ignores]
+# main.py: Loguru setup requires imports after configuration (InterceptHandler must be installed before other imports)
+"src/voxy_agents/main.py" = ["E402"]
+
 [tool.mypy]
 python_version = "3.12"
 warn_return_any = false
