feat: FASE 6 Loguru Migration + Vision Agent Model-Agnostic Refactoring
Implementa duas melhorias principais no sistema VOXY:

## 1. FASE 6: Migração Loguru API Routes (38 logs estruturados)

Migração completa das 5 rotas da API de stdlib logging para Loguru:
- api/routes/images.py (20 logs) - Upload e gerenciamento de imagens
- api/routes/messages.py (6 logs) - Operações de mensagens
- api/routes/sessions.py (2 logs) - Gestão de sessões
- api/routes/chat.py (1 log) - Erros de chat
- api/routes/test.py (9 logs) - Testes de subagentes

Benefícios:
- Rastreabilidade HTTP 100% (trace_id em todas requests)
- Context propagation (user_id, session_id estruturados)
- Mascaramento LGPD/GDPR automático via log_filters.py
- 25+ eventos estruturados (MODULE|ACTION pattern)
- Coverage: 28% → 38% (20/53 arquivos)

## 2. Vision Agent Model-Agnostic Refactoring (15 edições)

Remove referências hardcoded a modelos específicos (GPT-4o/GPT-5):

**vision_agent.py** (6 edições):
- Comentários e docstrings agora model-agnostic
- System prompt genérico ("multimodal vision AI")
- Tool description configurável

**voxy_orchestrator.py** (9 edições + import os):
- Remove referências a "GPT-5 multimodal"
- Adiciona env var CONVERSATIONALIZATION_MODEL
- Import os para os.getenv()

**.env.example**:
- Nova variável: CONVERSATIONALIZATION_MODEL=gpt-4o-mini
- Documentação do modelo de conversacionalização

Benefícios:
- 100% configurável via environment variables
- Alinhado com arquitetura LiteLLM Multi-Provider
- Flexibilidade total para trocar modelos Vision
- Zero breaking changes

## Arquivos Modificados (9 arquivos)
- HISTORY.md (documentação FASE 6)
- backend/.env.example (+CONVERSATIONALIZATION_MODEL)
- backend/src/voxy_agents/api/routes/*.py (5 arquivos)
- backend/src/voxy_agents/core/subagents/vision_agent.py
- backend/src/voxy_agents/core/voxy_orchestrator.py

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -98,6 +98,11 @@ VISION_INCLUDE_USAGE=true
 # Vision Agent Post-processing
 ENABLE_VISION_POSTPROCESSING=true
 
+# Conversationalization Model (Optional)
+# Model used for converting technical Vision Agent analysis to conversational responses
+# Default: gpt-4o-mini (lightweight and cost-effective)
+CONVERSATIONALIZATION_MODEL=gpt-4o-mini
+
 # Vision Agent Rate Limiting (MANTIDO)
 VISION_RATE_LIMIT_PER_MINUTE=10
 VISION_RATE_LIMIT_PER_HOUR=50
