feat(logging): Migração completa para Loguru + Sistema Dual Logging
## 🎯 Principais Mudanças

### 1. Sistema de Logging Dual
- **voxy_main.log**: Logs limpos em INFO mode (sem event prefixes técnicos)
- **voxy_debug.log**: Sempre DEBUG com todos os detalhes técnicos (novo arquivo)
- Console limpo em modo desenvolvimento (INFO)

### 2. Filtro Inteligente de Eventos Técnicos
Eventos filtrados em INFO mode (visíveis apenas em DEBUG):
- `REASONING_CONFIG|*` (config loading técnico)
- `GENERAL` (uvicorn, litellm logs externos)
- `LOGGER_INIT` (inicialização do logger)
- `VOXY_ORCHESTRATOR|REASONING_CONFIG` (config do orchestrator)

Em DEBUG mode: todos eventos passam sem filtro

### 3. Migração Completa para Loguru
**5 Subagentes migrados**:
- Calculator Agent: Loguru + structured logging
- Corrector Agent: Loguru + structured logging
- Translator Agent: Loguru + structured logging
- Weather Agent: Loguru + structured logging
- Vision Agent: Refatoração padronizada (628→311 LOC) + Loguru

**VOXY Orchestrator**:
- Logging hierárquico com árvore de subagentes
- Rastreamento de tool invocations
- Session tracking melhorado

### 4. Universal Reasoning Capture (NOVO)
Arquivo: `src/voxy_agents/utils/universal_reasoning_capture.py`
- Multi-provider reasoning extraction (Claude, Gemini, OpenAI, Grok, DeepSeek)
- Suporte a extended_thinking, think, reasoning_content
- 792 LOC de extração inteligente de reasoning

### 5. LLM Factory Enhancements
- Novo método: `get_reasoning_params()`
- Novo método: `create_model_with_reasoning()`
- Reasoning config validation e merging

### 6. Correções de Escopo e Filtros
- `log_level` → `log_level_str` + `is_debug_mode` boolean
- Filtros corretamente aplicados a console e arquivos
- `_combined_filter` aplicado a sys.stdout e voxy_main.log

### 7. Deduplicação de Logs
- Removida linha duplicada "📦 Registering Subagents" de main.py
- Info já presente em "✅ VOXY System Ready" summary

## 📁 Arquivos Modificados (11 files)

**Core Logging System**:


--- a/.gitignore
+++ b/.gitignore
@@ -86,6 +86,7 @@ VOXY_ORCHESTRATOR_LITELLM_PLAN.md
 VOXY_SYSTEM_FLOWCHART.md
 *.backup
 AGENTS.md
+.codex
 
 # OS
 .DS_Store
@@ -100,3 +101,4 @@ htmlcov/
 insomnia_collection.json
 test_image.png
 coverage.json
+.claude
