--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -28,6 +28,13 @@ pillow = "^11.3.0"
 aiofiles = "^24.1.0"
 nest-asyncio = "^1.6.0"
 loguru = "^0.7.3"
+# LangGraph Migration Dependencies (Phase 1)
+langgraph = "^0.6.0"
+langchain-core = "^0.3.0"
+langchain-community = "^0.3.0"
+langchain-openai = "^0.3.0"
+langgraph-checkpoint-sqlite = "^2.0.0"
+langchain-litellm = "^0.3.0"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^8.2.0"
