feat(langgraph): Implement Phase 2 - Supervisor Graph & Entry Router
Phase 2 complete implementation:

Architecture:
- Entry router with conditional routing (PATH1 vs PATH2)
- Vision bypass stub for PATH1 (direct execution)
- Supervisor stub for PATH2 (acknowledgment)
- Translator node integration (from Phase 1)

Components Implemented:
1. Entry Router Node (entry_router.py)
   - detect_vision_bypass() function
   - Conditional routing based on image_url + keywords
   - PATH1: Vision bypass (image + vision keywords)
   - PATH2: Supervisor (all other cases)

2. Vision Bypass Stub (vision_bypass.py)
   - Phase 2 stub implementation
   - Returns placeholder response
   - Updates context with vision_analysis
   - Full implementation in Phase 3

3. SupervisorGraphBuilder (graph_builder.py)
   - Builder class for assembling LangGraph
   - create_phase2_graph() factory function
   - Support for incremental migration phases
   - Checkpointer integration

4. LangGraphOrchestrator Service (orchestrator.py)
   - Service layer wrapping LangGraph
   - process_message() async method
   - Feature parity with SDK orchestrator
   - Singleton pattern with get_langgraph_orchestrator()

5. Feature Flag Integration (chat.py)
   - VOXY_LANGGRAPH_ENABLED environment variable
   - Dual-engine architecture (SDK vs LangGraph)
   - Response format compatibility
   - Engine selection logging

6. Testing Support (test_agent.py)
   - test_voxy_langgraph() function
   - --engine langgraph flag support
   - Benchmark mode with route tracking
   - Performance metrics (4ms execution)

Testing:
- PATH2 (supervisor): ✅ Working (0.004s)
- PATH1 (vision bypass): ✅ Working (0.004s)
- Graph compilation: ✅ 2s
- Feature flag: ✅ Integrated in FastAPI routes

Environment:
- Added VOXY_LANGGRAPH_ENABLED=false to .env.example

Next: Phase 3 - Full ReAct supervisor + all 5 subagents

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -144,5 +144,8 @@ VOXY_ENV=development
 VOXY_LOG_DIR=logs
 VOXY_LOG_JSON=false
 
+# VOXY LangGraph Migration (Phase 2-6 Feature Flag)
+VOXY_LANGGRAPH_ENABLED=false
+
 # LiteLLM Logging (previne logs duplicados)
 LITELLM_LOG=ERROR
