feat(langgraph): Phase 4 - Observability, Token Tracking & Durable Storage
Implementação completa da Phase 4 da migração LangGraph com observabilidade
equivalente ao OpenAI Agents SDK. Adiciona token tracking, tool invocation
monitoring, multi-model cost aggregation e SQLite checkpointer.

## Phase 4A: Token Usage Tracking

### Novos Componentes
- **usage_callback.py** (91 linhas): Callback handler para eventos LangGraph
  - UsageCallbackHandler: Captura on_llm_end, on_chat_model_start
  - ToolInvocationData: Estrutura para tool call tracking
  - Coverage: 84%

- **usage_extractor.py** (139 linhas): Extração de métricas de uso
  - extract_usage_from_state(): Extrai tokens de AIMessage.usage_metadata
  - extract_usage_from_callback(): Fallback via callback handler
  - Agrega usage across multiple LLM calls
  - Coverage: 55%

### Integrações
- **orchestrator.py**:
  - Cria UsageCallbackHandler em cada invocation
  - Adiciona callbacks ao config
  - Extrai usage após graph execution
  - Loga via log_usage_metrics() (SDK parity mantida)
  - Gera trace_id para request correlation

- **chat.py** (API route):
  - Expõe usage metrics no response
  - Adiciona trace_id ao metadata
  - Logs estruturados com Loguru

## Phase 4B: Tool Invocation Tracking

### Callback Extensions
- **on_tool_start()**: Captura início de tool calls
- **on_tool_end()**: Marca conclusão e outputs
- **on_tool_error()**: Trata erros de tools

### Extractor Functions
- **extract_tool_invocations()**: Converte para SubagentInfo
- Mapeia tool names → agent names (5 subagentes)
- Dual-source support (callback + ToolMessage fallback)

## Phase 4C: SQLite Checkpointer Activation

### Configuração
- **checkpointer.py**: Default alterado de MEMORY → SQLITE
- Persistência automática em voxy_graph.db
- Postgres support preparado (Supabase futuro)

### Environment Variables (.env.example)
```bash
VOXY_CHECKPOINT_TYPE=sqlite
VOXY_CHECKPOINT_DB_PATH=voxy_graph.db
VOXY_USAGE_TRACKING_ENABLED=true
VOXY_DETAILED_TOOL

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -147,5 +147,18 @@ VOXY_LOG_JSON=false
 # VOXY LangGraph Migration (Phase 2-6 Feature Flag)
 VOXY_LANGGRAPH_ENABLED=false
 
+# ============================================
+# LANGGRAPH CONFIGURATION (Phase 4C)
+# ============================================
+
+# Checkpointer Configuration
+# Type: memory (non-persistent, POC/testing) | sqlite (persistent, development/production) | postgres (future, Supabase)
+VOXY_CHECKPOINT_TYPE=sqlite
+VOXY_CHECKPOINT_DB_PATH=voxy_graph.db
+
+# Observability Configuration (Phase 4A)
+VOXY_USAGE_TRACKING_ENABLED=true
+VOXY_DETAILED_TOOL_LOGGING=true
+
 # LiteLLM Logging (previne logs duplicados)
 LITELLM_LOG=ERROR
