feat(langgraph): Otimização crítica de tokens e correção de roteamento de visão
Este commit resolve três problemas críticos no Vision Agent LangGraph e
remove código legacy não utilizado, mantendo 100% o princípio Model-Agnostic.

## 1. 🐛 FIX: Vision Agent Resposta Vazia (GPT-5 Reasoning Models)

**Problema**: Vision Agent processava requisições com sucesso (logs mostravam
1984 tokens de reasoning) mas response.content chegava vazio no frontend.

**Causa Raiz**: OpenRouter reasoning models (GPT-5, o1, Claude Sonnet Thinking)
têm DOIS limites de tokens separados:
- `max_tokens`: controla saída de texto
- `extra_body.reasoning.max_tokens`: controla tokens de raciocínio

Quando apenas `max_tokens=2000` estava configurado, o modelo usava todos os
tokens para reasoning e era truncado antes de gerar resposta textual
(finish_reason='length').

**Solução**:
- Adicionado `VISION_REASONING_MAX_TOKENS` em .env (4000 tokens)
- `VisionModelConfig`: novo campo `reasoning_max_tokens`
- `models_config.py`: carrega variável do ambiente
- `vision_node.py`: configura `extra_body.reasoning.max_tokens` para OpenRouter
- Implementação Model-Agnostic: só aplica se provider=openrouter E variável definida

**Arquivos**:
- backend/.env.example (+8 linhas de config e doc)
- backend/src/voxy_agents/config/models_config.py (+19 linhas)
- backend/src/voxy_agents/langgraph/nodes/vision_node.py (+110 linhas refatoradas)
- backend/src/voxy_agents/langgraph/nodes/vision_bypass.py (+8 linhas)

## 2. 🧹 CLEAN: Remoção de Código Morto (Vision Rate Limiting)

**Código Removido**: 326 linhas de código não utilizado + 6 variáveis .env
- ❌ `api/middleware/vision_rate_limiter.py` (DELETADO - zero imports)
- ❌ 6 variáveis de rate limiting e cost control em .env
- ❌ 18 linhas em `settings.py` (atributos não usados)
- ❌ 6 referências em `model_config` dict

**Verificação**: `grep -r "VISION_RATE_LIMIT|vision_rate_limiter"` = 0 resultados

**Impacto**: -326 linhas, codebase mais limpo, sem confusão sobre feature

--- a/.gitignore
+++ b/.gitignore
@@ -103,3 +103,8 @@ insomnia_collection.json
 test_image.png
 coverage.json
 .claude
+
+# LangGraph SQLite Checkpointer databases
+*.db
+*.db-shm
+*.db-wal
