--- a/backend/.env.example
+++ b/backend/.env.example
@@ -83,22 +83,17 @@ WEATHER_INCLUDE_USAGE=true
 
 VISION_PROVIDER=openrouter
 VISION_MODEL=provider/model-name
-VISION_MAX_TOKENS=2000
+# Max tokens for text output (leave empty for unlimited)
+VISION_MAX_TOKENS=4000
+# Max reasoning tokens (OpenRouter reasoning models only - e.g., o1, claude-sonnet-thinking)
+# Lower values = faster response, Higher values = deeper analysis
+# Recommended: 2000 (fast), 4000 (balanced), 8000 (deep)
+VISION_REASONING_MAX_TOKENS=4000
 VISION_TEMPERATURE=0.1
 VISION_REASONING_EFFORT=medium
 VISION_CACHE_TTL=600
 VISION_INCLUDE_USAGE=true
 ENABLE_VISION_POSTPROCESSING=true
-
-# Vision Rate Limiting
-VISION_RATE_LIMIT_PER_MINUTE=10
-VISION_RATE_LIMIT_PER_HOUR=50
-VISION_MONTHLY_QUOTA=1000
-
-# Vision Cost Control
-VISION_MAX_COST_PER_ANALYSIS=0.10
-VISION_DAILY_BUDGET_LIMIT=50.00
-VISION_MONTHLY_BUDGET_LIMIT=500.00
 
 # ============================================
 # REASONING/THINKING CONFIGURATION
@@ -154,7 +149,8 @@ VOXY_LANGGRAPH_ENABLED=false
 # Checkpointer Configuration
 # Type: memory (non-persistent, POC/testing) | sqlite (persistent, development/production) | postgres (future, Supabase)
 VOXY_CHECKPOINT_TYPE=sqlite
-VOXY_CHECKPOINT_DB_PATH=voxy_graph.db
+# Relative to backend/ directory
+VOXY_CHECKPOINT_DB_PATH=data/voxy_langgraph.db
 
 # Observability Configuration (Phase 4A)
 VOXY_USAGE_TRACKING_ENABLED=true
