feat(langgraph): Hard cut-over - LangGraph como motor único de orquestração
BREAKING CHANGE: OpenAI Agents SDK removido completamente do projeto

Completa migração Phases 1-5 com remoção total do SDK e consolidação do LangGraph.

Validação: 100% funcional (WebSocket, 5 subagents, vision, history, tracking)

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -139,12 +139,10 @@ VOXY_ENV=development
 VOXY_LOG_DIR=logs
 VOXY_LOG_JSON=false
 
-# VOXY LangGraph Migration (Phase 2-6 Feature Flag)
-VOXY_LANGGRAPH_ENABLED=false
-
 # ============================================
-# LANGGRAPH CONFIGURATION (Phase 4C)
+# VOXY LANGGRAPH CONFIGURATION (Production)
 # ============================================
+# LangGraph is the default and only orchestration engine
 
 # Checkpointer Configuration
 # Type: memory (non-persistent, POC/testing) | sqlite (persistent, development/production) | postgres (future, Supabase)
