fix(imports): Corrige imports para mypy e adiciona src/__init__.py
Padroniza todos os imports para usar prefixo 'src.' e adiciona __init__.py
na raiz do src/ para resolver erro do mypy 'Source file found twice'.

## 🔧 Correções Aplicadas

### 1. Imports Padronizados
- Todos os imports agora usam: `from src.shared.*`, `from src.voxy.*`
- Remove ambiguidade de paths (shared.* vs src.shared.*)

### 2. src/__init__.py Criado
- Marca src/ como pacote raiz explícito para mypy
- Resolve erro: "Source file found twice under different module names"

### 3. Configuração Mypy Atualizada (pyproject.toml)
- `explicit_package_bases = true`
- `namespace_packages = true`
- Remove workaround anterior (follow_imports = skip)

## ✅ Validação

Mypy agora roda corretamente:
- ❌ Antes: Erro fatal "Source file found twice" (bloqueava análise)
- ✅ Depois: 80 erros de tipo legítimos em 10 arquivos (não bloqueantes)
- ✅ 76 arquivos analisados com sucesso

## 📚 Referências

- Mypy Issue #10633: https://github.com/python/mypy/issues/10633
- StackOverflow: https://stackoverflow.com/q/79741348
- Solução: Adicionar __init__.py + explicit_package_bases

## 🎯 Melhor Prática

Skipear mypy NÃO é boa prática. A solução correta é:
1. Padronizar imports com prefixo consistente
2. Adicionar __init__.py nos pacotes raiz
3. Configurar explicit_package_bases no mypy

--- a/.gitignore
+++ b/.gitignore
@@ -82,11 +82,10 @@ logs/
 *.tmp
 *.temp
 test-*.js
-VOXY_ORCHESTRATOR_LITELLM_PLAN.md
-VOXY_SYSTEM_FLOWCHART.md
 *.backup
 AGENTS.md
 HISTORY.md
+GEMINI.md
 .codex
 
 # OS
